--- a/public/about.html
+++ b/public/about.html
@@ -1,1 +1,32 @@
-m
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mc Eats</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+
+    <!-- navbar -->
+    <div>
+        <div>
+            <!-- logo -->
+             <img src="" alt="logo">
+        </div>
+
+        <div>
+            <!-- links -->
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about us</a></li>
+                <li><a href="#">menu</a></li>
+                <li><a href="#">booking</a></li>
+                <li><a href="#">contact us</a></li>
+            </ul>
+        </div>
+    </div>
+    
+    <script src="./app.js"></script>
+</body>
+</html>
