--- a/public/menu.html
+++ b/public/menu.html
@@ -18,14 +18,67 @@
         <div>
             <!-- links -->
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">about us</a></li>
-                <li><a href="#">menu</a></li>
-                <li><a href="#">booking</a></li>
-                <li><a href="#">contact us</a></li>
+               <li><a href="./index.html">home</a></li>
+                <li><a href="./about.html">about us</a></li>
+                <li><a href="./menu.html">menu</a></li>
+                <li><a href="./booking.html">booking</a></li>
+                <li><a href="./contact.html">contact us</a></li>
             </ul>
         </div>
     </div>
+
+    <!-- products -->
+    <section>
+
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+
+    </section>
     
     <script src="./app.js"></script>
 </body>
