changed menu item image names

--- a/public/menu.html
+++ b/public/menu.html
@@ -31,13 +31,17 @@
     <section>
 
         <div>
-            <div></div>
+            <div>
+                <img src="./assets/images/beef-burger-small.jpg" alt="">
+            </div>
             <div></div>
             <div></div>
         </div>
 
         <div>
-            <div></div>
+            <div>
+                <img src="./assets/images/chicken-burger-small.jpg" alt="">
+            </div>
             <div></div>
             <div></div>
         </div>
