--- a/public/menu.html
+++ b/public/menu.html
@@ -32,7 +32,7 @@
 
         <div>
             <div>
-                <img src="./assets/images/beef-burger-small.jpg" alt="">
+                <img src="./assets/images/beef-burger.jpg" alt="beef burger">
             </div>
             <div></div>
             <div></div>
@@ -40,44 +40,56 @@
 
         <div>
             <div>
-                <img src="./assets/images/chicken-burger-small.jpg" alt="">
+                <img src="./assets/images/chicken-burger.jpg" alt="chicken burger">
             </div>
             <div></div>
             <div></div>
         </div>
 
         <div>
-            <div></div>
+            <div>
+                <img src="./assets/images/bacon-burger.jpg" alt="bacon burger">
+            </div>
             <div></div>
             <div></div>
         </div>
         
         <div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-
-        <div>
-            <div></div>
+            <div>
+                <img src="assets/images/smash-burger.jpg" alt="smash burger">
+            </div>
             <div></div>
             <div></div>
         </div>
 
         <div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-
-        <div>
-            <div></div>
+            <div>
+                <img src="./assets/images/beef-wrap.jpg" alt="beef wrap">
+            </div>
             <div></div>
             <div></div>
         </div>
 
         <div>
+            <div>
+                <img src="./assets/images/fries.jpg" alt="fries">
+            </div>
             <div></div>
+            <div></div>
+        </div>
+
+        <div>
+            <div>
+                <img src="./assets/images/soda.jpg" alt="soda">
+            </div>
+            <div></div>
+            <div></div>
+        </div>
+
+        <div>
+            <div>
+                <img src="./assets/images/milkshake.jpg" alt="milkshake">
+            </div>
             <div></div>
             <div></div>
         </div>
