added menu item names and prices

--- a/public/menu.html
+++ b/public/menu.html
@@ -34,64 +34,104 @@
             <div>
                 <img src="./assets/images/beef-burger.jpg" alt="beef burger">
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <h2>Beef Burger</h2>
+            </div>
+            <div>
+                <h3>Price:</h3>
+                <p><span>R: </span>59.99</p>
+            </div>
         </div>
 
         <div>
             <div>
                 <img src="./assets/images/chicken-burger.jpg" alt="chicken burger">
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <h2>Chicken Burger</h2>
+            </div>
+            <div>
+                 <h3>Price:</h3>
+                <p><span>R: </span>54.99</p>
+            </div>
         </div>
 
         <div>
             <div>
                 <img src="./assets/images/bacon-burger.jpg" alt="bacon burger">
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <h2>Bacon Burger</h2>
+            </div>
+            <div>
+                 <h3>Price:</h3>
+                <p><span>R: </span>59.99</p>
+            </div>
         </div>
         
         <div>
             <div>
                 <img src="assets/images/smash-burger.jpg" alt="smash burger">
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <h2>Smash Burger</h2>
+            </div>
+            <div>
+                 <h3>Price:</h3>
+                <p><span>R: </span>49.99</p>
+            </div>
         </div>
 
         <div>
             <div>
                 <img src="./assets/images/beef-wrap.jpg" alt="beef wrap">
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <h2>Beef Wrap</h2>
+            </div>
+            <div>
+                 <h3>Price:</h3>
+                <p><span>R: </span>44.99</p>
+            </div>
         </div>
 
         <div>
             <div>
                 <img src="./assets/images/fries.jpg" alt="fries">
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <h2>Fries</h2>
+            </div>
+            <div>
+                 <h3>Price:</h3>
+                <p><span>R: </span>19.99</p>
+            </div>
         </div>
 
         <div>
             <div>
                 <img src="./assets/images/soda.jpg" alt="soda">
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <h2>Soda</h2>
+            </div>
+            <div>
+                 <h3>Price:</h3>
+                <p><span>R: </span>23.99</p>
+            </div>
         </div>
 
         <div>
             <div>
                 <img src="./assets/images/milkshake.jpg" alt="milkshake">
             </div>
-            <div></div>
-            <div></div>
+            <div>
+                <h2>Milkshake</h2>
+            </div>
+            <div>
+                 <h3>Price:</h3>
+                <p><span>R: </span>35.99</p>
+            </div>
         </div>
 
     </section>
