--- a/public/menu.html
+++ b/public/menu.html
@@ -30,6 +30,8 @@
     <!-- products -->
     <section>
 
+        <h2>Our Menu</h2>
+
         <div>
             <div>
                 <img src="./assets/images/beef-burger.jpg" alt="beef burger">
@@ -135,7 +137,22 @@
         </div>
 
     </section>
-    
+
+    <!-- modal -->
+    <section>
+        <!-- container -->
+        <div>
+            <!-- image -->
+            <div>
+                <!-- item name and description -->
+                <div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="./app.js"></script>
 </body>
 </html>
