--- a/public/contact.html
+++ b/public/contact.html
@@ -60,7 +60,7 @@
 
           <h3>Message</h3>
           <div>
-            <textarea>
+            <textarea name="message" rows="10" cols="30">
 
             </textarea>
           </div>
