added booking form to booking.html

--- a/public/booking.html
+++ b/public/booking.html
@@ -1,32 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mc Eats</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <!-- navbar -->
     <div>
-        <div>
-            <!-- logo -->
-             <img src="" alt="logo">
-        </div>
+      <div>
+        <!-- logo -->
+        <img src="" alt="logo" />
+      </div>
 
-        <div>
-            <!-- links -->
-            <ul>
-                <li><a href="./index.html">home</a></li>
-                <li><a href="./about.html">about us</a></li>
-                <li><a href="./menu.html">menu</a></li>
-                <li><a href="./booking.html">booking</a></li>
-                <li><a href="./contact.html">contact us</a></li>
-            </ul>
-        </div>
+      <div>
+        <!-- links -->
+        <ul>
+          <li><a href="./index.html">home</a></li>
+          <li><a href="./about.html">about us</a></li>
+          <li><a href="./menu.html">menu</a></li>
+          <li><a href="./booking.html">booking</a></li>
+          <li><a href="./contact.html">contact us</a></li>
+        </ul>
+      </div>
     </div>
-    
+
+    <!-- reservation section -->
+    <section>
+      <h2>Booking</h2>
+
+      <div>
+        <form action="">
+          <div>
+            <div>
+              <label for="date">Date</label>
+              <input type="date" name="date" />
+            </div>
+
+            <div>
+              <label for="time">Time</label>
+              <input type="time" name="time" />
+            </div>
+          </div>
+
+          <div>
+            <label for="people">People</label>
+          <select id="people" name="people">
+            <option value="1">1 person</option>
+            <option value="2">2 people</option>
+            <option value="3">3 people</option>
+            <option value="4">4 people</option>
+            <option value="5">5 people</option>
+          </select>
+          </div>         
+
+          <div>
+            <div>
+              <label for="email">Email</label>
+              <input type="email" name="email" />
+            </div>
+
+            <div>
+              <label for="phone">Phone number</label>
+              <input type="tel" name="phone" />
+            </div>
+          </div>
+
+          <div>
+             <label for="comments">Comments</label>
+          <textarea name="comments" rows="10" cols="30"> </textarea>
+          </div>
+
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+    </section>
+
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
