added about us content to about.html

--- a/public/about.html
+++ b/public/about.html
@@ -26,7 +26,30 @@
             </ul>
         </div>
     </div>
-    
+
+    <!-- about us section  -->
+    <section>
+        <h2>About Us</h2>
+
+        <h3>Welcome to Mc Eats — Where Every Bite is Better!</h3>
+
+        <p>
+            At Mc Eats, we’re more than just a burger joint — we’re a celebration of bold flavors, fresh ingredients, and good times. Founded with a simple mission to serve mouthwatering burgers made with love and quality, we’ve grown into a local favorite where friends, families, and burger lovers unite.
+        </p>
+
+        <p>
+            Our patties are handcrafted daily from 100% premium beef (or plant-based goodness, if that's your thing), grilled to perfection and served on fresh, locally baked buns. From our classic cheeseburgers to adventurous specials stacked high with unique toppings, every burger tells a story.
+        </p>
+
+        <p>
+            But it’s not just about the food — it’s about the vibe. Whether you're grabbing a quick lunch, chilling with friends over fries and shakes, or bringing the whole crew for dinner, we aim to make every visit memorable.
+        </p>
+
+        <p>
+            We believe great burgers bring people together. So come hungry, leave happy, and become part of the Burger Haven family. One bite, and you’ll know — this is where burgers belong.
+        </p>
+    </section>
+
     <script src="./app.js"></script>
 </body>
 </html>
