added booking details confirmation modal

--- a/public/booking.html
+++ b/public/booking.html
@@ -77,6 +77,44 @@
       </div>
     </section>
 
+    <!-- modal: confirm booking details  -->
+     <section>
+        <!-- modal container  -->
+        <div>
+            <!-- details card  -->
+            <div>
+
+                <h2>Booking Details</h2>
+
+                <div>
+                    <h3>Date</h3>
+                </div>
+
+                <div>
+                    <h3>Time</h3>
+                </div>
+
+                <div>
+                    <h3>Number of People</h3>
+                </div>
+
+                <div>
+                    <h3>Email</h3>
+                </div>
+
+                <div>
+                    <h3>Comments</h3>
+                </div>
+
+                <div>
+                    <input type="submit" value="Confirm">
+                </div>
+            </div>
+        </div>
+     </section>
+
+    <!-- modal: confirm booking -->
+
     <script src="./app.js"></script>
   </body>
 </html>
