added corfirm booking modal

--- a/public/booking.html
+++ b/public/booking.html
@@ -114,6 +114,22 @@
      </section>
 
     <!-- modal: confirm booking -->
+     <section>
+        <!-- modal container -->
+        <div>
+            <!-- booking confirmation card  -->
+            <div>
+                <h2>Finalise your booking</h2>
+
+                <p>Your almost there! Click "Confirm" to complete your booking.</p>
+
+                <div>
+                    <input type="submit" value="Confirm">
+                </div>
+            </div>
+
+        </div>
+     </section>
 
     <script src="./app.js"></script>
   </body>
