partially styled navbar

--- a/public/menu.html
+++ b/public/menu.html
@@ -9,15 +9,15 @@
 <body>
 
     <!-- navbar -->
-    <div>
-        <div>
+    <div class="flex">
+        <div class="logo">
             <!-- logo -->
              <img src="" alt="logo">
         </div>
 
-        <div>
+        <div class="nav-li">
             <!-- links -->
-            <ul>
+            <ul class="flex list">
                <li><a href="./index.html">home</a></li>
                 <li><a href="./about.html">about us</a></li>
                 <li><a href="./menu.html">menu</a></li>
@@ -139,7 +139,7 @@
     </section>
 
     <!-- modal -->
-    <section>
+    <section class="hidden">
         <!-- container -->
         <div>
             <!-- image -->
