--- a/public/booking.html
+++ b/public/booking.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    
     <!-- navbar -->
-    <div>
-      <div>
-        <!-- logo -->
-        <img src="" alt="logo" />
-      </div>
+    <div class="flex">
+        <div class="logo">
+            <!-- logo -->
+             <img src="" alt="logo">
+        </div>
 
-      <div>
-        <!-- links -->
-        <ul>
-          <li><a href="./index.html">home</a></li>
-          <li><a href="./about.html">about us</a></li>
-          <li><a href="./menu.html">menu</a></li>
-          <li><a href="./booking.html">booking</a></li>
-          <li><a href="./contact.html">contact us</a></li>
-        </ul>
-      </div>
+        <div class="nav-li">
+            <!-- links -->
+            <ul class="flex list">
+               <li><a href="./index.html">home</a></li>
+                <li><a href="./about.html">about us</a></li>
+                <li><a href="./menu.html">menu</a></li>
+                <li><a href="./booking.html">booking</a></li>
+                <li><a href="./contact.html">contact us</a></li>
+            </ul>
+        </div>
     </div>
 
     <!-- reservation section -->
@@ -78,7 +79,7 @@
     </section>
 
     <!-- modal: confirm booking details  -->
-     <section>
+     <section class="hidden">
         <!-- modal container  -->
         <div>
             <!-- details card  -->
@@ -114,7 +115,7 @@
      </section>
 
     <!-- modal: confirm booking -->
-     <section>
+     <section class="hidden">
         <!-- modal container -->
         <div>
             <!-- booking confirmation card  -->
