--- a/public/contact.html
+++ b/public/contact.html
@@ -7,23 +7,24 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    
     <!-- navbar -->
-    <div>
-      <div>
-        <!-- logo -->
-        <img src="" alt="logo" />
-      </div>
+    <div class="flex">
+        <div class="logo">
+            <!-- logo -->
+             <img src="" alt="logo">
+        </div>
 
-      <div>
-        <!-- links -->
-        <ul>
-          <li><a href="./index.html">home</a></li>
-          <li><a href="./about.html">about us</a></li>
-          <li><a href="./menu.html">menu</a></li>
-          <li><a href="./booking.html">booking</a></li>
-          <li><a href="./contact.html">contact us</a></li>
-        </ul>
-      </div>
+        <div class="nav-li">
+            <!-- links -->
+            <ul class="flex list">
+               <li><a href="./index.html">home</a></li>
+                <li><a href="./about.html">about us</a></li>
+                <li><a href="./menu.html">menu</a></li>
+                <li><a href="./booking.html">booking</a></li>
+                <li><a href="./contact.html">contact us</a></li>
+            </ul>
+        </div>
     </div>
 
     <!-- contact form -->
