--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 
-    <!-- navbar -->
-    <div>
-        <div>
+   <!-- navbar -->
+    <div class="flex">
+        <div class="logo">
             <!-- logo -->
              <img src="" alt="logo">
         </div>
 
-        <div>
+        <div class="nav-li">
             <!-- links -->
-            <ul>
-                <li><a href="./index.html">home</a></li>
+            <ul class="flex list">
+               <li><a href="./index.html">home</a></li>
                 <li><a href="./about.html">about us</a></li>
                 <li><a href="./menu.html">menu</a></li>
                 <li><a href="./booking.html">booking</a></li>
