--- a/public/menu.html
+++ b/public/menu.html
@@ -1,158 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mc Eats</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <!-- navbar -->
     <div class="flex">
-        <div class="logo">
-            <!-- logo -->
-             <img src="" alt="logo">
-        </div>
+      <div class="logo">
+        <!-- logo -->
+        <img src="" alt="logo" />
+      </div>
 
-        <div class="nav-li">
-            <!-- links -->
-            <ul class="flex list">
-               <li><a href="./index.html">home</a></li>
-                <li><a href="./about.html">about us</a></li>
-                <li><a href="./menu.html">menu</a></li>
-                <li><a href="./booking.html">booking</a></li>
-                <li><a href="./contact.html">contact us</a></li>
-            </ul>
-        </div>
+      <div class="nav-li">
+        <!-- links -->
+        <ul class="flex list">
+          <li><a href="./index.html">home</a></li>
+          <li><a href="./about.html">about us</a></li>
+          <li><a href="./menu.html">menu</a></li>
+          <li><a href="./booking.html">booking</a></li>
+          <li><a href="./contact.html">contact us</a></li>
+        </ul>
+      </div>
     </div>
 
     <!-- products -->
-    <section>
+    <section id="menu">
+      <h2>Our Menu</h2>
 
-        <h2>Our Menu</h2>
-
+      <div class="flex menu">
         <div>
-            <div>
-                <img src="./assets/images/beef-burger.jpg" alt="beef burger">
-            </div>
-            <div>
-                <h2>Beef Burger</h2>
-            </div>
-            <div>
-                <h3>Price:</h3>
-                <p><span>R: </span>59.99</p>
-            </div>
+          <div>
+            <img src="./assets/images/beef-burger.jpg" alt="beef burger" />
+          </div>
+          <div>
+            <h2>Beef Burger</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>59.99</p>
+          </div>
         </div>
 
         <div>
-            <div>
-                <img src="./assets/images/chicken-burger.jpg" alt="chicken burger">
-            </div>
-            <div>
-                <h2>Chicken Burger</h2>
-            </div>
-            <div>
-                 <h3>Price:</h3>
-                <p><span>R: </span>54.99</p>
-            </div>
+          <div>
+            <img
+              src="./assets/images/chicken-burger.jpg"
+              alt="chicken burger"
+            />
+          </div>
+          <div>
+            <h2>Chicken Burger</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>54.99</p>
+          </div>
         </div>
 
         <div>
-            <div>
-                <img src="./assets/images/bacon-burger.jpg" alt="bacon burger">
-            </div>
-            <div>
-                <h2>Bacon Burger</h2>
-            </div>
-            <div>
-                 <h3>Price:</h3>
-                <p><span>R: </span>59.99</p>
-            </div>
-        </div>
-        
-        <div>
-            <div>
-                <img src="assets/images/smash-burger.jpg" alt="smash burger">
-            </div>
-            <div>
-                <h2>Smash Burger</h2>
-            </div>
-            <div>
-                 <h3>Price:</h3>
-                <p><span>R: </span>49.99</p>
-            </div>
+          <div>
+            <img src="./assets/images/bacon-burger.jpg" alt="bacon burger" />
+          </div>
+          <div>
+            <h2>Bacon Burger</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>59.99</p>
+          </div>
         </div>
 
         <div>
-            <div>
-                <img src="./assets/images/beef-wrap.jpg" alt="beef wrap">
-            </div>
-            <div>
-                <h2>Beef Wrap</h2>
-            </div>
-            <div>
-                 <h3>Price:</h3>
-                <p><span>R: </span>44.99</p>
-            </div>
+          <div>
+            <img src="assets/images/smash-burger.jpg" alt="smash burger" />
+          </div>
+          <div>
+            <h2>Smash Burger</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>49.99</p>
+          </div>
         </div>
 
         <div>
-            <div>
-                <img src="./assets/images/fries.jpg" alt="fries">
-            </div>
-            <div>
-                <h2>Fries</h2>
-            </div>
-            <div>
-                 <h3>Price:</h3>
-                <p><span>R: </span>19.99</p>
-            </div>
+          <div>
+            <img src="./assets/images/beef-wrap.jpg" alt="beef wrap" />
+          </div>
+          <div>
+            <h2>Beef Wrap</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>44.99</p>
+          </div>
         </div>
 
         <div>
-            <div>
-                <img src="./assets/images/soda.jpg" alt="soda">
-            </div>
-            <div>
-                <h2>Soda</h2>
-            </div>
-            <div>
-                 <h3>Price:</h3>
-                <p><span>R: </span>23.99</p>
-            </div>
+          <div>
+            <img src="./assets/images/fries.jpg" alt="fries" />
+          </div>
+          <div>
+            <h2>Fries</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>19.99</p>
+          </div>
         </div>
 
         <div>
-            <div>
-                <img src="./assets/images/milkshake.jpg" alt="milkshake">
-            </div>
-            <div>
-                <h2>Milkshake</h2>
-            </div>
-            <div>
-                 <h3>Price:</h3>
-                <p><span>R: </span>35.99</p>
-            </div>
+          <div>
+            <img src="./assets/images/soda.jpg" alt="soda" />
+          </div>
+          <div>
+            <h2>Soda</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>23.99</p>
+          </div>
         </div>
 
+        <div>
+          <div>
+            <img src="./assets/images/milkshake.jpg" alt="milkshake" />
+          </div>
+          <div>
+            <h2>Milkshake</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>35.99</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- modal -->
     <section class="hidden">
-        <!-- container -->
+      <!-- container -->
+      <div>
+        <!-- image -->
         <div>
-            <!-- image -->
-            <div>
-                <!-- item name and description -->
-                <div>
-
-                </div>
-            </div>
+          <!-- item name and description -->
+          <div></div>
         </div>
+      </div>
     </section>
 
-
     <script src="./app.js"></script>
-</body>
+  </body>
 </html>
