--- a/public/contact.html
+++ b/public/contact.html
@@ -28,16 +28,16 @@
     </div>
 
     <!-- contact form -->
-    <section>
+    <section id="contact" class="flex flex-vertical">
       <div>
         <h2>Contact Us</h2>
         <p>Please complete the form below:</p>
       </div>
 
       <div>
-        <form method="post">
-          <div>
-            <h3>Name</h3>
+        <form class="flex flex-vertical" method="post">
+          <h3>Name</h3>
+          <div class="flex">
             <div>
               <label for="fname">First name: </label>
               <input type="text" id="fname" name="fname"/>
@@ -66,7 +66,7 @@
             </textarea>
           </div>
 
-          <input type="submit" value="Submit">
+          <input  type="submit" value="Submit">
         </form>
       </div>
     </section>
