booking.html - booking form layout

--- a/public/booking.html
+++ b/public/booking.html
@@ -28,11 +28,11 @@
     </div>
 
     <!-- reservation section -->
-    <section>
+    <section id="booking">
       <h2>Booking</h2>
 
-      <div>
-        <form action="">
+      <div class="flex flex-vertical">
+        <form action="" class="flex flex-vertical">
           <div>
             <div>
               <label for="date">Date</label>
