--- a/public/booking.html
+++ b/public/booking.html
@@ -68,8 +68,9 @@
             </div>
           </div>
 
+          <p>Comments</p>
           <div>
-             <label for="comments">Comments</label>
+             <!-- <label for="comments">Comments</label> -->
           <textarea name="comments" rows="10" cols="30"> </textarea>
           </div>
 
