modal layout - booking.html

--- a/public/booking.html
+++ b/public/booking.html
@@ -80,35 +80,40 @@
     </section>
 
     <!-- modal: confirm booking details  -->
-     <section class="hidden">
+     <section class="hidden modal-bkg">
         <!-- modal container  -->
-        <div>
+        <div class="modal-container">
             <!-- details card  -->
-            <div>
+            <div class="modal flex flex-vertical">
 
                 <h2>Booking Details</h2>
 
-                <div>
+                <div class="flex flex-vertical">
                     <h3>Date</h3>
+                    <p>info</p>
                 </div>
 
-                <div>
+                <div class="flex flex-vertical">
                     <h3>Time</h3>
+                    <p>info</p>
                 </div>
 
-                <div>
+                <div class="flex flex-vertical">
                     <h3>Number of People</h3>
+                    <p>Info</p>
                 </div>
 
-                <div>
+                <div class="flex flex-vertical">
                     <h3>Email</h3>
+                    <p>Info</p>
                 </div>
 
-                <div>
+                <div class="flex flex-vertical">
                     <h3>Comments</h3>
+                    <p>Info</p>
                 </div>
 
-                <div>
+                <div class="flex flex-vertical">
                     <input type="submit" value="Confirm">
                 </div>
             </div>
@@ -116,11 +121,11 @@
      </section>
 
     <!-- modal: confirm booking -->
-     <section class="hidden">
+     <section class="hidden modal-bkg">
         <!-- modal container -->
-        <div>
+        <div class=" modal-container">
             <!-- booking confirmation card  -->
-            <div>
+            <div class="modal flex flex-vertical">
                 <h2>Finalise your booking</h2>
 
                 <p>Your almost there! Click "Confirm" to complete your booking.</p>
