menu.html - added menu item modal content

--- a/public/menu.html
+++ b/public/menu.html
@@ -141,13 +141,21 @@
     </section>
 
     <!-- modal -->
-    <section class="hidden">
+    <section id="menu-modal" class="hidden modal-bkg">
       <!-- container -->
-      <div>
+      <div class="modal-container">
         <!-- image -->
-        <div>
+        <div class="modal flex flex-vertical">
           <!-- item name and description -->
-          <div></div>
+          <!-- <div>
+            <img src="./assets/images/bacon-burger.jpg" alt="">
+          </div> -->
+          <div>
+            <h4>Name</h4>
+          </div>
+          <div>
+            <p>description</p>
+          </div>
         </div>
       </div>
     </section>
