index.html - added content and links to page

--- a/public/index.html
+++ b/public/index.html
@@ -27,17 +27,101 @@
         </div>
     </div>
 
-    <!-- about us -->
-    <section id=""></section>
+    <!-- about us section  -->
+    <section>
+        <h2>About Us</h2>
+
+        <h3>Welcome to Mc Eats — Where Every Bite is Better!</h3>
+
+        <p>
+            At Mc Eats, we’re more than just a burger joint — we’re a celebration of bold flavors, fresh ingredients, and good times. Founded with a simple mission to serve mouthwatering burgers made with love and quality, we’ve grown into a local favorite where friends, families, and burger lovers unite.
+        </p>
+
+        <p>
+            Our patties are handcrafted daily from 100% premium beef (or plant-based goodness, if that's your thing), grilled to perfection and served on fresh, locally baked buns. From our classic cheeseburgers to adventurous specials stacked high with unique toppings, every burger tells a story.
+        </p>
+
+        <p>
+            But it’s not just about the food — it’s about the vibe. Whether you're grabbing a quick lunch, chilling with friends over fries and shakes, or bringing the whole crew for dinner, we aim to make every visit memorable.
+        </p>
+
+        <p>
+            We believe great burgers bring people together. So come hungry, leave happy, and become part of the Burger Haven family. One bite, and you’ll know — this is where burgers belong.
+        </p>
+    </section>
+
+    <!-- image slider -->
+    <section>
+        
+    </section>
 
     <!-- menu -->
-    <section id=""></section>
+    <section id="menu">
+      <h2>Our Menu</h2>
+
+      <div class="flex menu">
+        <div>
+          <div>
+            <img src="./assets/images/beef-burger.jpg" alt="beef burger" />
+          </div>
+          <div>
+            <h2>Beef Burger</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>59.99</p>
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <img
+              src="./assets/images/chicken-burger.jpg"
+              alt="chicken burger"
+            />
+          </div>
+          <div>
+            <h2>Chicken Burger</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>54.99</p>
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <img src="./assets/images/bacon-burger.jpg" alt="bacon burger" />
+          </div>
+          <div>
+            <h2>Bacon Burger</h2>
+          </div>
+          <div>
+            <h3>Price:</h3>
+            <p><span>R: </span>59.99</p>
+          </div>
+        </div>
+      </div>
+      <a class="flex flex-vertical" href="./menu.html">See more</a>
+    </section>
 
     <!-- booking -->
-    <section id=""></section>
+    <section id="">
+        <div class="flex flex-vertical">
+            <h2>Make a booking</h2>
+            <p>make a booking</p>
+             <a href="./booking.html">Click here</a>
+        </div>
+    </section>
 
     <!-- contact us -->
-    <section id=""></section>
+    <section id="">
+        <div class="flex flex-vertical">
+            <h2>Contact us</h2>
+            <p>reach out to us</p>
+             <a href="./contact.html">Click here</a>
+        </div>
+    </section>
     
 
     <script src="./app.js"></script>
