menu.html - menu item click functionality

--- a/public/menu.html
+++ b/public/menu.html
@@ -31,7 +31,8 @@
       <h2>Our Menu</h2>
 
       <div class="flex menu">
-        <div>
+
+        <div data-index="0" class="menu-item">
           <div>
             <img src="./assets/images/beef-burger.jpg" alt="beef burger" />
           </div>
@@ -44,7 +45,7 @@
           </div>
         </div>
 
-        <div>
+        <div data-index="1" class="menu-item">
           <div>
             <img
               src="./assets/images/chicken-burger.jpg"
@@ -60,7 +61,7 @@
           </div>
         </div>
 
-        <div>
+        <div data-index="2" class="menu-item">
           <div>
             <img src="./assets/images/bacon-burger.jpg" alt="bacon burger" />
           </div>
@@ -73,7 +74,7 @@
           </div>
         </div>
 
-        <div>
+        <div data-index="3" class="menu-item">
           <div>
             <img src="assets/images/smash-burger.jpg" alt="smash burger" />
           </div>
@@ -86,7 +87,7 @@
           </div>
         </div>
 
-        <div>
+        <div data-index="4" class="menu-item">
           <div>
             <img src="./assets/images/beef-wrap.jpg" alt="beef wrap" />
           </div>
@@ -99,7 +100,7 @@
           </div>
         </div>
 
-        <div>
+        <div data-index="5" class="menu-item">
           <div>
             <img src="./assets/images/fries.jpg" alt="fries" />
           </div>
@@ -112,7 +113,7 @@
           </div>
         </div>
 
-        <div>
+        <div data-index="6" class="menu-item">
           <div>
             <img src="./assets/images/soda.jpg" alt="soda" />
           </div>
@@ -125,7 +126,7 @@
           </div>
         </div>
 
-        <div>
+        <div data-index="7" class="menu-item">
           <div>
             <img src="./assets/images/milkshake.jpg" alt="milkshake" />
           </div>
@@ -151,10 +152,10 @@
             <img src="./assets/images/bacon-burger.jpg" alt="">
           </div> -->
           <div>
-            <h4>Name</h4>
+            <h4 class="item-name">Name</h4>
           </div>
           <div>
-            <p>description</p>
+            <p class="item-description">description</p>
           </div>
         </div>
       </div>
