added menu item descriptions; added description to menu item modal

--- a/public/menu.html
+++ b/public/menu.html
@@ -43,6 +43,11 @@
             <h3>Price:</h3>
             <p><span>R: </span>59.99</p>
           </div>
+          <div class="hidden">
+            <p>
+              Juicy, flame-grilled 100% Angus beef patty layered with crisp lettuce, ripe tomato, red onion, and crispy onion rings, topped with melted cheddar cheese and our house-made burger sauce. Served on a toasted brioche bun with a side of golden fries. A hearty favorite that never goes out of style.
+            </p>
+          </div>
         </div>
 
         <div data-index="1" class="menu-item">
@@ -59,6 +64,11 @@
             <h3>Price:</h3>
             <p><span>R: </span>54.99</p>
           </div>
+          <div class="hidden">
+            <p>
+              Tender, golden-fried chicken breast fillet topped with fresh lettuce, sliced tomato, and crunchy slaw, finished with creamy garlic mayo on a toasted brioche bun. Served with a side of seasoned fries. A crispy, juicy classic that hits the spot every time.
+            </p>
+          </div>
         </div>
 
         <div data-index="2" class="menu-item">
@@ -71,6 +81,11 @@
           <div>
             <h3>Price:</h3>
             <p><span>R: </span>59.99</p>
+          </div>
+          <div class="hidden">
+            <p>
+              A thick, juicy beef patty grilled to perfection and stacked with crispy smoked bacon, melted cheddar cheese, fresh lettuce, tomato, and caramelized onions. Drizzled with our signature smoky BBQ sauce and served on a toasted brioche bun. Comes with a side of seasoned fries for the ultimate comfort meal.
+            </p>
           </div>
         </div>
 
@@ -85,6 +100,11 @@
             <h3>Price:</h3>
             <p><span>R: </span>49.99</p>
           </div>
+          <div class="hidden">
+            <p>
+              Two thin, crispy-edged beef patties smashed and seared on a hot griddle for maximum flavor, layered with melted American cheese, shredded lettuce, diced onions, and our tangy house burger sauce. Served on a soft toasted potato bun with a side of crispy fries. Simple, messy, and insanely satisfying.
+            </p>
+          </div>
         </div>
 
         <div data-index="4" class="menu-item">
@@ -97,6 +117,11 @@
           <div>
             <h3>Price:</h3>
             <p><span>R: </span>44.99</p>
+          </div>
+          <div class="hidden">
+            <p>
+              Tender strips of seasoned grilled beef wrapped in a warm flour tortilla with crisp lettuce, juicy tomatoes, red onion, and shredded cheese. Drizzled with creamy garlic sauce and a hint of smoky chipotle for a flavorful kick. Served with a side of fries or a fresh garden salad.
+            </p>
           </div>
         </div>
 
@@ -111,6 +136,11 @@
             <h3>Price:</h3>
             <p><span>R: </span>19.99</p>
           </div>
+           <div class="hidden">
+            <p>
+              Crispy, golden fries made from farm-fresh potatoes, perfectly seasoned and fried to a satisfying crunch. Served hot and fresh — the perfect side to any meal or great on their own with your choice of dipping sauces.
+            </p>
+          </div>
         </div>
 
         <div data-index="6" class="menu-item">
@@ -124,6 +154,11 @@
             <h3>Price:</h3>
             <p><span>R: </span>23.99</p>
           </div>
+          <div class="hidden">
+            <p>
+              Enjoy an ice-cold refreshment with your choice of classic fountain sodas — including cola, lemon-lime, orange, root beer, and more. Served chilled with ice for the perfect thirst-quencher to complement your meal.
+            </p>
+          </div>
         </div>
 
         <div data-index="7" class="menu-item">
@@ -136,6 +171,11 @@
           <div>
             <h3>Price:</h3>
             <p><span>R: </span>35.99</p>
+          </div>
+          <div class="hidden">
+            <p>
+              Thick, creamy, and made to order — our classic milkshake is blended with premium ice cream and real milk for that nostalgic, diner-style flavor. Available in vanilla, chocolate, and strawberry, each shake is topped with whipped cream and a cherry on top. The perfect sweet treat to finish your meal or enjoy anytime.
+            </p>
           </div>
         </div>
       </div>
