booking.html - added js file form input saving; added confirmDetailsModal - form input display

--- a/public/booking.html
+++ b/public/booking.html
@@ -32,7 +32,7 @@
       <h2>Booking</h2>
 
       <div class="flex flex-vertical">
-        <form action="" class="flex flex-vertical">
+        <form id="info" action="submit" class="flex flex-vertical">
           <div>
             <div>
               <label for="date">Date</label>
@@ -80,7 +80,7 @@
     </section>
 
     <!-- modal: confirm booking details  -->
-     <section class="hidden modal-bkg">
+     <section id="confirmDetailsModal" class="hidden modal-bkg">
         <!-- modal container  -->
         <div class="modal-container">
             <!-- details card  -->
@@ -90,27 +90,32 @@
 
                 <div class="flex flex-vertical">
                     <h3>Date</h3>
-                    <p>info</p>
+                    <p id="date">info</p>
                 </div>
 
                 <div class="flex flex-vertical">
                     <h3>Time</h3>
-                    <p>info</p>
+                    <p id="time">info</p>
                 </div>
 
                 <div class="flex flex-vertical">
                     <h3>Number of People</h3>
-                    <p>Info</p>
+                    <p id="people">Info</p>
                 </div>
 
                 <div class="flex flex-vertical">
                     <h3>Email</h3>
-                    <p>Info</p>
+                    <p id="email">Info</p>
+                </div>
+
+                <div class="flex flex-vertical">
+                    <h3>Phone</h3>
+                    <p id="phone">Info</p>
                 </div>
 
                 <div class="flex flex-vertical">
                     <h3>Comments</h3>
-                    <p>Info</p>
+                    <p id="comments">Info</p>
                 </div>
 
                 <div class="flex flex-vertical">
