renamed app.js to booking.js; created new app.js file

--- a/public/booking.html
+++ b/public/booking.html
@@ -145,6 +145,6 @@
         </div>
      </section>
 
-    <script src="./app.js"></script>
+    <script src="./booking.js"></script>
   </body>
 </html>
