--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,74 @@
     </section>
 
     <!-- image slider -->
-    <section>
-        
+    <section id="gallery">
+        <!-- container div 
+         <div>
+          <h2>Gallery</h2>
+
+          image container
+           <div>
+
+            <img src="" />
+
+            arrows
+             <div class="left">prev</div>
+             <div class="right">next</div>
+           </div>
+         </div> -->
+
+         <!-- Slideshow container -->
+<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <img src="./assets/images/bacon-burger-large.jpg" >
+    <div class="text">bacon burger</div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="./assets/images/beef-burger-large.jpg" >
+    <div class="text">beef burger</div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="./assets/images/beef-wrap-large.jpg" >
+    <div class="text">beef wrap</div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="./assets/images/chicken-burger-large.jpg" >
+    <div class="text">chicken burger</div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="./assets/images/fries-large.jpg" >
+    <div class="text">fries</div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="./assets/images/milkshake-large.jpg" >
+    <div class="text">milkshake</div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="./assets/images/smash-burger-large.jpg" >
+    <div class="text">smash burger</div>
+  </div>
+
+  <div class="mySlides fade">
+    <img src="./assets/images/soda-large.jpg" >
+    <div class="text">soda</div>
+  </div>
+
+  
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
     </section>
 
     <!-- menu -->
