--- a/public/contact.html
+++ b/public/contact.html
@@ -40,28 +40,28 @@
           <div class="flex">
             <div>
               <label for="fname">First name: </label>
-              <input type="text" id="fname" name="fname"/>
+              <input type="text" id="fname" name="fname" required/>
             </div>
 
             <div>
               <label for="lname">Last name: </label>
-              <input type="text" id="lname" name="lname"/>
+              <input type="text" id="lname" name="lname" required/>
             </div>
           </div>
 
           <h3>Email</h3>
           <div>
-            <input type="email" name="email" />
+            <input type="email" name="email" required/>
           </div>
 
           <h3>Subject</h3>
           <div>
-            <input type="text" name="subject"/>
+            <input type="text" name="subject" required/>
           </div>
 
           <h3>Message</h3>
           <div>
-            <textarea name="message" rows="10" cols="30">
+            <textarea name="message" rows="10" cols="30" required maxlength="250">
 
             </textarea>
           </div>
