styled header section and navbar

--- a/public/booking.html
+++ b/public/booking.html
@@ -8,11 +8,12 @@
   </head>
   <body>
     
+    <section class="header">
     <!-- navbar -->
-    <div class="flex">
+    <div class="flex flex-horizontal">
         <div class="logo">
             <!-- logo -->
-             <img src="" alt="logo">
+            <h1 class="logo">Mc Eats</h1>
         </div>
 
         <div class="nav-li">
@@ -26,6 +27,7 @@
             </ul>
         </div>
     </div>
+  </section>
 
     <!-- reservation section -->
     <section id="booking">
