--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 
-   <!-- navbar -->
-    <div class="flex">
+  <section class="header">
+    <!-- navbar -->
+    <div class="flex flex-horizontal">
         <div class="logo">
             <!-- logo -->
-             <img src="" alt="logo">
+            <h1 class="logo">Mc Eats</h1>
         </div>
 
         <div class="nav-li">
@@ -26,14 +27,22 @@
             </ul>
         </div>
     </div>
+  </section>
+   
 
     <!-- about us section  -->
-    <section>
-        <h2>About Us</h2>
+    <section id="about">
+    
+      <h2>Welcome to Mc Eats — Where Every Bite is Better!</h3>
 
-        <h3>Welcome to Mc Eats — Where Every Bite is Better!</h3>
+        <div class="flex">
 
-        <p>
+          <div class="about-img">
+
+        </div>
+
+        <div class="about-text">
+           <p>
             At Mc Eats, we’re more than just a burger joint — we’re a celebration of bold flavors, fresh ingredients, and good times. Founded with a simple mission to serve mouthwatering burgers made with love and quality, we’ve grown into a local favorite where friends, families, and burger lovers unite.
         </p>
 
@@ -48,26 +57,15 @@
         <p>
             We believe great burgers bring people together. So come hungry, leave happy, and become part of the Burger Haven family. One bite, and you’ll know — this is where burgers belong.
         </p>
+        </div>
+
+        </div>
+  
     </section>
 
     <!-- image slider -->
-    <section id="gallery">
-        <!-- container div 
-         <div>
-          <h2>Gallery</h2>
+    <section id="gallery" class="flex">
 
-          image container
-           <div>
-
-            <img src="" />
-
-            arrows
-             <div class="left">prev</div>
-             <div class="right">next</div>
-           </div>
-         </div> -->
-
-         <!-- Slideshow container -->
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
