--- a/public/menu.html
+++ b/public/menu.html
@@ -7,24 +7,27 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    
+  <section class="header">
     <!-- navbar -->
-    <div class="flex">
-      <div class="logo">
-        <!-- logo -->
-        <img src="" alt="logo" />
-      </div>
+    <div class="flex flex-horizontal">
+        <div class="logo">
+            <!-- logo -->
+            <h1 class="logo">Mc Eats</h1>
+        </div>
 
-      <div class="nav-li">
-        <!-- links -->
-        <ul class="flex list">
-          <li><a href="./index.html">home</a></li>
-          <li><a href="./about.html">about us</a></li>
-          <li><a href="./menu.html">menu</a></li>
-          <li><a href="./booking.html">booking</a></li>
-          <li><a href="./contact.html">contact us</a></li>
-        </ul>
-      </div>
+        <div class="nav-li">
+            <!-- links -->
+            <ul class="flex list">
+               <li><a href="./index.html">home</a></li>
+                <li><a href="./about.html">about us</a></li>
+                <li><a href="./menu.html">menu</a></li>
+                <li><a href="./booking.html">booking</a></li>
+                <li><a href="./contact.html">contact us</a></li>
+            </ul>
+        </div>
     </div>
+  </section>
 
     <!-- products -->
     <section id="menu">
