index.html: about us section styling

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
         <div class="flex">
 
           <div class="about-img">
-
-        </div>
+            <img src="./assets/images/about.jpg" alt="" class="about">
+          </div>
 
         <div class="about-text">
            <p>
@@ -58,8 +58,10 @@
             We believe great burgers bring people together. So come hungry, leave happy, and become part of the Burger Haven family. One bite, and you’ll know — this is where burgers belong.
         </p>
         </div>
+  
 
         </div>
+
   
     </section>
 
