index.html and menu.html: changed menu section heading levels

--- a/public/menu.html
+++ b/public/menu.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    
+
   <section class="header">
     <!-- navbar -->
     <div class="flex flex-horizontal">
@@ -40,10 +40,10 @@
             <img src="./assets/images/beef-burger.jpg" alt="beef burger" />
           </div>
           <div>
-            <h2>Beef Burger</h2>
+            <h3>Beef Burger</h3>
           </div>
           <div>
-            <h3>Price:</h3>
+            <h4>Price:</h4>
             <p><span>R: </span>59.99</p>
           </div>
           <div class="hidden">
@@ -61,10 +61,10 @@
             />
           </div>
           <div>
-            <h2>Chicken Burger</h2>
+            <h3>Chicken Burger</h3>
           </div>
           <div>
-            <h3>Price:</h3>
+            <hh34>Price:</h4>
             <p><span>R: </span>54.99</p>
           </div>
           <div class="hidden">
@@ -79,10 +79,10 @@
             <img src="./assets/images/bacon-burger.jpg" alt="bacon burger" />
           </div>
           <div>
-            <h2>Bacon Burger</h2>
+            <h3>Bacon Burger</h3>
           </div>
           <div>
-            <h3>Price:</h3>
+            <h4>Price:</h4>
             <p><span>R: </span>59.99</p>
           </div>
           <div class="hidden">
@@ -97,11 +97,11 @@
             <img src="assets/images/smash-burger.jpg" alt="smash burger" />
           </div>
           <div>
-            <h2>Smash Burger</h2>
+            <h3>Smash Burger</h3>
           </div>
           <div>
-            <h3>Price:</h3>
-            <p><span>R: </span>49.99</p>
+            <h4>Price:</h4>
+            <p><span>R: </span>49.99</p>h3
           </div>
           <div class="hidden">
             <p>
@@ -115,10 +115,10 @@
             <img src="./assets/images/beef-wrap.jpg" alt="beef wrap" />
           </div>
           <div>
-            <h2>Beef Wrap</h2>
+            <h3>Beef Wrap</h3>
           </div>
           <div>
-            <h3>Price:</h3>
+            <h4>Price:</h4>
             <p><span>R: </span>44.99</p>
           </div>
           <div class="hidden">
@@ -133,11 +133,11 @@
             <img src="./assets/images/fries.jpg" alt="fries" />
           </div>
           <div>
-            <h2>Fries</h2>
+            <h3>Fries</h3>
           </div>
           <div>
-            <h3>Price:</h3>
-            <p><span>R: </span>19.99</p>
+            <h4>Price:</h4>
+            <p><span>R: </span>19.99</p>h3
           </div>
            <div class="hidden">
             <p>
@@ -151,10 +151,10 @@
             <img src="./assets/images/soda.jpg" alt="soda" />
           </div>
           <div>
-            <h2>Soda</h2>
+            <h3>Soda</h3>
           </div>
           <div>
-            <h3>Price:</h3>
+            <h4>Price:</h4>
             <p><span>R: </span>23.99</p>
           </div>
           <div class="hidden">
@@ -169,10 +169,10 @@
             <img src="./assets/images/milkshake.jpg" alt="milkshake" />
           </div>
           <div>
-            <h2>Milkshake</h2>
+            <h3>Milkshake</h3>
           </div>
           <div>
-            <h3>Price:</h3>
+            <h4>Price:</h4>
             <p><span>R: </span>35.99</p>
           </div>
           <div class="hidden">
