about.html - about section styling

--- a/public/about.html
+++ b/public/about.html
@@ -30,12 +30,18 @@
   </section>
 
     <!-- about us section  -->
-    <section>
-        <h2>About Us</h2>
+    <section id="about">
+    
+      <h2>Welcome to Mc Eats — Where Every Bite is Better!</h3>
 
-        <h3>Welcome to Mc Eats — Where Every Bite is Better!</h3>
+        <div class="flex">
 
-        <p>
+          <div class="about-img">
+            <img src="./assets/images/about.jpg" alt="" class="about">
+          </div>
+
+        <div class="about-text">
+           <p>
             At Mc Eats, we’re more than just a burger joint — we’re a celebration of bold flavors, fresh ingredients, and good times. Founded with a simple mission to serve mouthwatering burgers made with love and quality, we’ve grown into a local favorite where friends, families, and burger lovers unite.
         </p>
 
@@ -50,6 +56,12 @@
         <p>
             We believe great burgers bring people together. So come hungry, leave happy, and become part of the Burger Haven family. One bite, and you’ll know — this is where burgers belong.
         </p>
+        </div>
+  
+
+        </div>
+
+  
     </section>
 
     <script src="./app.js"></script>
