menu section styling changes

--- a/public/menu.html
+++ b/public/menu.html
@@ -101,7 +101,7 @@
           </div>
           <div>
             <h4>Price:</h4>
-            <p><span>R: </span>49.99</p>h3
+            <p><span>R: </span>49.99</p>
           </div>
           <div class="hidden">
             <p>
@@ -137,7 +137,7 @@
           </div>
           <div>
             <h4>Price:</h4>
-            <p><span>R: </span>19.99</p>h3
+            <p><span>R: </span>19.99</p>
           </div>
            <div class="hidden">
             <p>
