index.html - booking and contact sections button styling; booking section background image added

--- a/public/index.html
+++ b/public/index.html
@@ -143,8 +143,7 @@
           <div>
             <img
               src="./assets/images/chicken-burger.jpg"
-              alt="chicken burger"
-            />h3
+              alt="chicken burger"/>
           </div>
           <div>
             <h3>Chicken Burger</h3>
@@ -172,7 +171,7 @@
     </section>
 
     <!-- booking -->
-    <section id="">
+    <section id="booking">
         <div class="flex flex-vertical">
             <h2>Make a booking</h2>
             <p>make a booking</p>
