fixed booking section styling issue

--- a/public/index.html
+++ b/public/index.html
@@ -171,7 +171,7 @@
     </section>
 
     <!-- booking -->
-    <section id="booking">
+    <section id="booking" class="index">
         <div class="flex flex-vertical">
             <h2>Make a booking</h2>
             <p>make a booking</p>
